# Egmont_cashier

./: README.md  pyproject.toml  setup.py
egmont_cashier/: __init__.py  exceptions.py  main.py  non_universal.py  person.py  universal.py
egmont_cashier/foodclubs/: __init__.py  foodclub.py  foodclub_month.py  foodclub_participant.py  foodclub_responsible.py  foodclubinfo.py
test_files/: foodclub.csv  universal.csv
tests/: fc_tests,py
